fixed layout shifts

--- a/src/App.css
+++ b/src/App.css
@@ -48,11 +48,14 @@
 }
 
 .test {
-  /* border: 2px solid blue; */
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* border: 2px solid red; */
 }
 
-.test,
 .finished-test {
   display: grid;
   place-content: center;
@@ -62,11 +65,10 @@
   height: 2rem;
   position: relative;
   display: block;
-
   top: 1.5rem;
   left: 0.2rem;
 
-  justify-self: start;
+  align-self: flex-start;
 }
 
 .test .timer {
@@ -98,20 +100,6 @@
 
 .input-text.match {
   color: rgb(29, 161, 73);
-}
-
-input {
-  height: 3rem;
-  border-radius: 0.5rem;
-  padding-inline: 1rem;
-  font-family: inherit;
-  font-size: 1rem;
-  outline: none;
-  border: none;
-}
-
-input.invisible {
-  visibility: hidden;
 }
 
 .word {
@@ -150,28 +138,31 @@ input.invisible {
   text-decoration: underline;
 }
 
-.temporary-data {
-  flex-grow: 1;
-  flex-shrink: 0;
-  margin-inline: auto;
-  gap: 0.5rem;
-  display: flex;
-  flex-direction: column;
-  background-color: rgba(0, 0, 0, 0.217);
-  padding: 1rem;
-  align-items: flex-start;
-  border-radius: 0.5rem;
-  color: rgb(185, 174, 174);
-}
-
 .form {
   width: 100%;
   margin-inline: auto;
+
+  /* border: 1px solid blue; */
 
   display: flex;
   flex-direction: column;
   gap: 1rem;
   justify-content: center;
+}
+
+input {
+  height: 3rem;
+  width: 100%;
+  border-radius: 0.5rem;
+  padding-inline: 1rem;
+  font-family: inherit;
+  font-size: 1rem;
+  outline: none;
+  border: none;
+}
+
+input.invisible {
+  visibility: hidden;
 }
 
 .btn {
@@ -231,7 +222,7 @@ input.invisible {
   top: 1rem;
 
   height: 2.25rem;
-  width: 100%;
+  width: 80%;
 
   background: #47494b;
   border-radius: 0.3rem;
@@ -259,4 +250,10 @@ input.invisible {
 
 .mode-selector-container > div button.selected {
   color: rgb(218, 148, 77);
+}
+
+.loading {
+  display: block;
+  justify-self: stretch;
+  border: 1px solid red;
 }
